--- a/resume.tex
+++ b/resume.tex
@@ -44,7 +44,7 @@ http://erp.co.ua/
 ERP System for government of Ukraine 
 \begin{itemize}
   \item Python, JavaScript, PostgreSQL, Bootstrap, XML
-  \item Implement solutions
+  \item Implementation solutions for localization for Ukrainian accounting and reports
   \item Bug fixing
   \item Write tests
 \end{itemize}
