--- a/resume.tex
+++ b/resume.tex
@@ -14,13 +14,12 @@
 
 \section{Experience}
 
-\datedsubsection{\textbf{One Click Media}, Remote}{Sep. 2019 -- Present}
+\datedsubsection{\textbf{MWDN}, Ukraine, Kyiv}{Sep. 2019 -- Present}
 \role{Software Engineer}
 
-https://www.oneclickmedia.com.au/
+https://mwdn.com/
 \begin{itemize}
-  \item Python, JavaScript, Docker, PostgreSQL, XML, AWS
-  \item Integration with APIs Gateway
+  \item Python, JavaScript
   \item Deploying
   \item Bug fixing
   
