--- a/resume.tex
+++ b/resume.tex
@@ -19,7 +19,7 @@
 
 https://mwdn.com/
 \begin{itemize}
-  \item Python, JavaScript
+  \item Python, JavaScript, Vue.js, gcloud
   \item Deploying
   \item Bug fixing
   
@@ -69,8 +69,8 @@ Web Scraping Project
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
     \item Languages and methodology: Python, JavaScript, Algorithms, Clean Code.
-    \item Databases: PostgreSQL, MySQL, MongoDB.
-    \item Frameworks and technologies: Docker, Flask, AWS, Azure, Odoo, Scrapy, Selenium, git
+    \item Databases: PostgreSQL, MySQL, MongoDB, Datastore
+    \item Frameworks and technologies: Vue.js, Docker, Flask, AWS, Azure, Odoo, Scrapy, Selenium, gcloud, git
 \end{itemize}
 
 \section{Miscellaneous}
