--- a/resume.tex
+++ b/resume.tex
@@ -76,7 +76,7 @@ Web Scraping Project
 \section{Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
   \item Blog: http://blog.andriisem.com/
-  \item LinkedIn: https://www.linkedin.com/in/andrii-semko-09455a100/
+  \item LinkedIn: https://www.linkedin.com/in/andriisem/
   \item Languages: English, Ukrainian, Russian
 \end{itemize}
 
