--- a/resume.tex
+++ b/resume.tex
@@ -14,13 +14,13 @@
 
 \section{Experience}
 
-\datedsubsection{\textbf{MWDN}, Ukraine, Kyiv}{Feb. 2019 -- Present}
+\datedsubsection{\textbf{vCita}, Ukraine, Kyiv}{Feb. 2019 -- Present}
 \role{Software Engineer}
 
-https://mwdn.com/
+https://www.vcita.com/
 \begin{itemize}
   \item Python, JavaScript, Vue.js, gcloud
-  \item Deploying
+  \item Building distributed applications
   \item Bug fixing
   
 \end{itemize}
