--- a/resume.tex
+++ b/resume.tex
@@ -69,7 +69,7 @@ Web Scraping Project
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
     \item Languages and methodology: Python, JavaScript, Algorithms, Clean Code.
-    \item Databases: PostgreSQL, MySQL, MongoDB, Datastore
+    \item Databases: PostgreSQL, Datastore
     \item Frameworks and technologies: Vue.js, Docker, Flask, AWS, Azure, Odoo, Scrapy, Selenium, gcloud, git
 \end{itemize}
 
@@ -77,7 +77,7 @@ Web Scraping Project
 \begin{itemize}[parsep=0.5ex]
   \item Blog: http://blog.andriisem.com/
   \item LinkedIn: https://www.linkedin.com/in/andriisem/
-  \item Languages: English, Ukrainian, Russian
+  \item Languages: English, Ukrainian
 \end{itemize}
 
 \end{document}
