--- a/resume.tex
+++ b/resume.tex
@@ -14,13 +14,15 @@
 
 \section{Experience}
 
-\datedsubsection{\textbf{vCita}, Ukraine, Kyiv}{Feb. 2019 -- Present}
+\datedsubsection{\textbf{WiseStamp}, Ukraine, Kyiv}{Feb. 2019 -- Present}
 \role{Software Engineer}
 
-https://www.vcita.com/
+https://www.wisestamp.com/
 \begin{itemize}
-  \item Python, JavaScript, Vue.js, gcloud
+  \item Python, JavaScript, TypeScript, Node.js, Vue.js, gcloud, Elastic Search, SMTP, Microsoft Exchange 
   \item Building distributed applications
+  \item Building services from scratch
+  \item Communicate with customers as tech expert
   \item Bug fixing
   
 \end{itemize}
@@ -68,14 +70,14 @@ Web Scraping Project
 
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
-    \item Languages and methodology: Python, JavaScript, Algorithms, Clean Code.
-    \item Databases: PostgreSQL, Datastore
-    \item Frameworks and technologies: Vue.js, Docker, Flask, AWS, Azure, Odoo, Scrapy, Selenium, gcloud, git
+    \item Languages and methodology: Python, JavaScript, TypeScript, Algorithms, Clean Code.
+    \item Databases: Datastore, MongoDB, PostgreSQL, Redis
+    \item Frameworks and technologies: Node.JS, Vue.js, Docker, Flask, Elastic Search, AWS, Azure, gcloud, git
 \end{itemize}
 
 \section{Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://blog.andriisem.com/
+  \item Blog: https://andriisem.github.io/
   \item LinkedIn: https://www.linkedin.com/in/andriisem/
   \item Languages: English, Ukrainian
 \end{itemize}
