--- a/resume.tex
+++ b/resume.tex
@@ -19,11 +19,8 @@
 
 https://www.wisestamp.com/
 \begin{itemize}
-  \item Python, JavaScript, TypeScript, Node.js, Vue.js, gcloud, Elastic Search, SMTP, Microsoft Exchange 
-  \item Building distributed applications
-  \item Building services from scratch
-  \item Communicate with customers as tech expert
-  \item Bug fixing
+  \item Python, JavaScript, TypeScript, Node.js, Vue.js, GCP, Elastic Search, 
+  \item \textbf{Service Creation:} Spearheaded the development of new services from scratch, ensuring a robust and efficient implementation process. Actively involved in implementing user interfaces, focusing on usability and aesthetic appeal
   
 \end{itemize}
 
