--- a/resume.tex
+++ b/resume.tex
@@ -20,8 +20,11 @@
 https://www.wisestamp.com/
 \begin{itemize}
   \item Python, JavaScript, TypeScript, Node.js, Vue.js, GCP, Elastic Search, 
-  \item \textbf{Service Creation:} Spearheaded the development of new services from scratch, ensuring a robust and efficient implementation process. Actively involved in implementing user interfaces, focusing on usability and aesthetic appeal
-  
+  \item \textbf{Service Creation:} Spearheaded the development of new services from scratch, ensuring a robust and efficient implementation process. Actively involved in implementing user interfaces, focusing on usability and aesthetic appeal.
+  \item \textbf{Reliability:} Held full responsibility for the reliability and performance of the developed services, implementing best practices to maintain high standards.
+  \item \textbf{Sprint Planning:} Played a key role in sprint planning, organizing and prioritizing tasks for efficient workflow management.
+  \item \textbf{Code Review:} Regularly conducted code reviews to ensure code quality, adherence to coding standards, and optimization of solutions.
+  \item \textbf{Client Communication: } Acted as a technical expert in communications with clients, providing clear and professional guidance on technical aspects and project progress.
 \end{itemize}
 
 \datedsubsection{\textbf{BITEGRICO}, Ukraine, Kyiv}{Oct. 2018 -- Sep. 2019}
