--- a/resume.tex
+++ b/resume.tex
@@ -63,10 +63,13 @@ Web Scraping Project
 \end{itemize}
 
 \section{Education}
-\datedsubsection{\textbf{"Kyiv Polytechnic Institute"}, Ukraine, Kyiv} {2013 - 2018}
-\textit{Master's degree} in Physical engineering and Computer Simulation
+\datedsubsection{\textbf{"National Technical University of Ukraine
+“Igor Sikorsky Kyiv Polytechnic Institute”"}, Ukraine, Kyiv} {2013 - 2017}
+\textit{Bachelor degree} in Engineering materials science 
 
-
+\datedsubsection{\textbf{"National Technical University of Ukraine
+“Igor Sikorsky Kyiv Polytechnic Institute”"}, Ukraine, Kyiv} {2017 - 2018}
+\textit{Master's degree} in Materials science and Computer Simulation
 
 \section{Skills}
 \begin{itemize}[parsep=0.5ex]
