--- a/resume.tex
+++ b/resume.tex
@@ -63,12 +63,12 @@ Web Scraping Project
 \end{itemize}
 
 \section{Education}
-\datedsubsection{\textbf{"National Technical University of Ukraine
-“Igor Sikorsky Kyiv Polytechnic Institute”"}, Ukraine, Kyiv} {2013 - 2017}
+\datedsubsection{\textbf{National Technical University of Ukraine
+"Igor Sikorsky Kyiv Polytechnic Institute"}, Ukraine, Kyiv} {2013 - 2017}
 \textit{Bachelor degree} in Engineering materials science 
 
-\datedsubsection{\textbf{"National Technical University of Ukraine
-“Igor Sikorsky Kyiv Polytechnic Institute”"}, Ukraine, Kyiv} {2017 - 2018}
+\datedsubsection{\textbf{National Technical University of Ukraine
+"Igor Sikorsky Kyiv Polytechnic Institute"}, Ukraine, Kyiv} {2017 - 2018}
 \textit{Master's degree} in Materials science and Computer Simulation
 
 \section{Skills}
