--- a/resume.tex
+++ b/resume.tex
@@ -24,7 +24,7 @@ https://www.wisestamp.com/
   \item \textbf{Reliability:} Held full responsibility for the reliability and performance of the developed services, implementing best practices to maintain high standards.
   \item \textbf{Sprint Planning:} Played a key role in sprint planning, organizing and prioritizing tasks for efficient workflow management.
   \item \textbf{Code Review:} Regularly conducted code reviews to ensure code quality, adherence to coding standards, and optimization of solutions.
-  \item \textbf{Client Communication: } Acted as a technical expert in communications with clients, providing clear and professional guidance on technical aspects and project progress.
+  \item \textbf{Client Communication:} Acted as a technical expert in communications with clients, providing clear and professional guidance on technical aspects and project progress.
 \end{itemize}
 
 \datedsubsection{\textbf{BITEGRICO}, Ukraine, Kyiv}{Oct. 2018 -- Sep. 2019}
@@ -32,9 +32,11 @@ https://www.wisestamp.com/
 
 https://www.bitegri.co/
 \begin{itemize}
-  \item Python, JavaScript, Docker, PostgreSQL, Bootstrap, XML
-  \item Cloud environment application rollout
-  
+  \item Python, JavaScript, Docker, PostgreSQL, AWA, GCP
+  \item \textbf{Service Development:} Led the development of key services for ERP/CRM systems, focusing on enhancing business processes and client engagement.
+  \item \textbf{DevOps Implementation:} Actively contributed to DevOps practices, streamlining development and operational processes for improved efficiency and reliability.
+  \item \textbf{Leadership Role:} Took on a lead engineer role, providing technical direction and project management.
+  \item \textbf{Talent Acquisition:} Responsible for hiring processes, successfully identifying and recruiting skilled individuals to build a high-performing engineering team.
 \end{itemize}
 
 \datedsubsection{\textbf{ERP Ukraine}, Ukraine, Kyiv}{Jan. 2017 -- Oct. 2018}
