--- a/resume.tex
+++ b/resume.tex
@@ -32,7 +32,7 @@ https://www.wisestamp.com/
 
 https://www.bitegri.co/
 \begin{itemize}
-  \item Python, JavaScript, Docker, PostgreSQL, AWA, GCP
+  \item Python, JavaScript, Docker, PostgreSQL, AWS, GCP
   \item \textbf{Service Development:} Led the development of key services for ERP/CRM systems, focusing on enhancing business processes and client engagement.
   \item \textbf{DevOps Implementation:} Actively contributed to DevOps practices, streamlining development and operational processes for improved efficiency and reliability.
   \item \textbf{Leadership Role:} Took on a lead engineer role, providing technical direction and project management.
