--- a/resume.tex
+++ b/resume.tex
@@ -43,13 +43,10 @@ https://www.bitegri.co/
 \role{Software Engineer}
 
 http://erp.co.ua/
-
-ERP System for government of Ukraine 
 \begin{itemize}
-  \item Python, JavaScript, PostgreSQL, Bootstrap, XML
-  \item Implementation solutions for localization for Ukrainian accounting and reports
-  \item Bug fixing
-  \item Write tests
+  \item Python, JavaScript, PostgreSQL, Bootstrap
+  \item \textbf{Service Development:} Development of key services for ERP/CRM systems. Implementation solutions for localization for Ukrainian accounting and reports.
+  \item \textbf{Code Review:} Regularly conducted code reviews to ensure code quality, adherence to coding standards, and optimization of solutions.
 \end{itemize}
 
 \datedsubsection{\textbf{MPS Development}, Ukraine, Kyiv}{Jan. 2016 -- Dec. 2017}
@@ -57,11 +54,14 @@ ERP System for government of Ukraine
 
 http://mpsdevelopment.net/
 
-Web Scraping Project
 \begin{itemize}
   \item Python, Selenium, Beautiful Soup, HTML, xPath
-  \item Bug fixing
-  \item Write tests
+  \item \textbf{Scraping Service Development:} Engineered a comprehensive scraping service focused on monitoring prices, thereby providing valuable market insights and competitive analysis.
+  \item \textbf{Quality Assurance:} Played a role in ensuring software quality by writing and maintaining a suite of robust tests, contributing to the reliability and efficiency of the developed services.
+  \item \textbf{Continuous Learning and Development:} Demonstrated a commitment to professional growth and staying current with industry trends through continuous learning and skill enhancement.
+  
+\end{itemize}
+    
 \end{itemize}
 
 \section{Education}
