--- a/resume.tex
+++ b/resume.tex
@@ -20,7 +20,7 @@
 https://www.wisestamp.com/
 \begin{itemize}
   \item Python, JavaScript, TypeScript, Node.js, Vue.js, GCP, Elastic Search.
-  \item \textbf{Service Creation:} Spearheaded the development of new services from scratch, ensuring a robust and efficient implementation process. Actively involved in implementing user interfaces, focusing on usability and aesthetic appeal.
+  \item \textbf{Service Development:} Spearheaded the development of new services from scratch, ensuring a robust and efficient implementation process. Actively involved in implementing user interfaces, focusing on usability and aesthetic appeal.
   \item \textbf{Reliability:} Held full responsibility for the reliability and performance of the developed services, implementing best practices to maintain high standards.
   \item \textbf{Sprint Planning:} Played a key role in sprint planning, organizing and prioritizing tasks for efficient workflow management.
   \item \textbf{Code Review:} Regularly conducted code reviews to ensure code quality, adherence to coding standards, and optimization of solutions.
